--- a/templates/book.html
+++ b/templates/book.html
@@ -1,18 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-   {% for book in book_key %}
-    <li>
-        <h2>{{book.title}}</h2>
-        <p><em>{{book.description}}</em></p>
-        <img src="{{book.image.url}}">
-        <p><strong>{{book.cost}}</strong></p>
-        <p>{{book.created_date}}</p>
-    </li>
-    {% endfor %}
-</body>
-</html>
+{% include 'header.html' %}
+
+<br>
+    <center>
+        <span class="badge text-bg-secondary">
+            <h1>My favorite books</h1>
+        </span>
+    </center>
+<br>
+<div class="flex">
+ {% for i in book_key %}
+    <div class="card" style="width: 18rem;">
+      <a href="/book_details/{{i.id}}/">
+          <img src="{{i.image.url}}" class="card-img-top" alt="...">
+      </a>
+      <div class="card-body">
+        <h5 class="card-title">{{i.title}}</h5>
+        <p class="card-text">{{i.description}}</p>
+        <a href="/book_details/{{i.id}}/" class="btn btn-primary">More about the book</a>
+      </div>
+    </div>
+   {% endfor %}
+     </div>
+{% include 'footer.html' %}
