--- a/templates/book_details.html
+++ b/templates/book_details.html
@@ -19,6 +19,18 @@
             <p>{{book_key.created_date}}</p>
         </div>
     </div>
+    <table border="2">
+        <tr>
+            <th>Date of the creationg a review</th> <th>Comment</th> <th>Mark</th>
+        </tr>
+
+        {% for i in book_key.review_object.all %}
+        <tr>
+            <td>{{i.created_date}}</td> <td>{{i.text_review}}</td> <td>{{i.rate_stars}}</td>
+        </tr>
+        {% endfor %}
+
+    </table>
 </body>
 {% include 'footer.html' %}
 </html>
