--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,7 +2,7 @@
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2023 Copyright:
-    <a class="text-dark" href="https://www.instagram.com/aianasagyn/?igshid=YmMyMTA2M2Y%3D">aianasagyn</a>
+    <a class="text-dark" href="https://www.instagram.com/aianasagyn/?igshid=YmMyMTA2M2Y%3D">akylchik</a>
   </div>
   <!-- Copyright -->
 </footer>
