--- a/templates/header.html
+++ b/templates/header.html
@@ -32,7 +32,20 @@
           </ul>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/add_comment/">Write a review</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link disabled"></a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Actions
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/create_post_book/"> Add </a></li>
+            <li><a class="dropdown-item" href="/book_list/"> Delete </a></li>
+            <li><a class="dropdown-item" href="#"> Edit </a></li>
+          </ul>
         </li>
       </ul>
       <form class="d-flex" role="search">
