--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,13 @@
 .flex {
     display: flex;
-    justify-content: center;
     align-items: center;
-    gap: 2rem;
+    justify-content: center;
+    gap: 50px;
+}
+img {
+    width: 400px;
+    height: 400px;
+}
+.col-5 {
+     margin-left: 40px !important;
 }
