--- a/templates/books.html
+++ b/templates/books.html
@@ -8,7 +8,7 @@
     </center>
 <br>
 <div class="flex">
- {% for i in book_key %}
+ {% for i in object_list %}
     <div class="card" style="width: 18rem;">
       <a href="/book_detail/{{i.id}}/">
           <img src="{{i.image.url}}" class="card-img-top" alt="...">
